# projects

./: README.md
beam/: arc.FCStd  euler.jl
cgx_test/: 0__.tga  1__.tga  2__.tga  all.msh  z0.nam  z1.nam  z1.sur
cnc/: README.md  cnc.FCStd  cnc_archive.FCStd
dpstand/: dpstand.FCStd
goodcad/: README  index.html  index.js
gui/: main.c
pico/: README.md
pico/blink/: CMakeLists.txt  blink.c
pico/blink-counter-asm/: blink-counter-asm.s
pico/blink-counter-gpio-from-memory-asm/: CMakeLists.txt  README
pico/blink_custom/: CMakeLists.txt  blink.c
pico/electromagnet-test/: CMakeLists.txt  electromagnet-test.c
pico/io/: CMakeLists.txt  io.c
pico/io-asm/: CMakeLists.txt  io.c  io.s
pico/reed-switch-test/: CMakeLists.txt  reed-switch-test.c
pico/serial/: CMakeLists.txt  serial.c
pico/test/: CMakeLists.txt  io.c  io.s
pico/test_blink/: CMakeLists.txt  README.md  blink.c  push
pureCAD/: LICENSE  README  index.html  index.js
tube/: tube-Assembly.gcode  tube-Assembly.stl  tube.20240918-210821.FCBak  tube.FCStd
xcadlib/: README.md  nema23.FCStd
